# billing

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.toolchain  Makefile  PLAN.md  PRESENTATION.md  billing_aggregates.md  bitemporal_curl.sh  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  use_case.md
catala_research/: BECARE.md  Dockerfile  FORMALIZATION.md  Makefile  docker-compose.yml
catala_research/case1/: Makefile  explanation.md  rental_agreement.catala_en  rental_agreement_tests.catala_en
catala_research/case2/: .gitignore  Case.md  Makefile  build_pyrun.sh  claude_family_pro.catala_en  claude_family_pro_tests.catala_en  explanation.md  probe.catala_en  test_claude_family_pro.py
catala_research/case3/: Makefile  build_pyrun.sh  explanation.md  soi_volume.catala_en  soi_volume_tests.catala_en  test_soi_volume.py  ~$дель начисления объемов услуги на СОИ по.docx  Модель начисления объемов услуги на СОИ по.docx  Модель_начисления_объемов_услуги_на_СОИ.md
curl_tests/: recalc_diff_curl.sh  uc4_curl.sh
tests/: conftest.py  test_dispatcher.py  test_migrate.py  test_reference_parameter.py  test_reference_parameter_repository.py  test_tariff_version_repository.py
tests/stage1/: test_reference_parameter.py  test_reference_parameter_repository.py
tests/stage2/: test_consumption_stream.py  test_consumption_stream_repository.py
tests/stage3/: test_tariff_validation.py  test_tariff_version.py  test_tariff_version_repository.py
tests/stage4/: test_billing_assessment.py  test_billing_calculation.py  (+1 more)
(+70 files in other folders)
