[project]
name = "billing"
version = "0.0.1"
description = "Биллинговый бекенд — доменный монолит (см. PLAN.md, billing_aggregates.md)"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/billing"]
